# recipes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
algorithms/binary_search/: binary_search.py
algorithms/selection_sort/: selection_sort.py
design_patterns/: adapter.py  decorator.py
