[tool.poetry]
name = "recipes"
version = "0.1.0"
description = "A collection of useful code recipes"
authors = ["Javier MR <javier4657@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"